[tool.poetry]
name = "hm-python-ttrl"
version = "0.1.0"
description = "Learning poetry"
license = "proprietary"
readme = "README.md"
homepage = "https://github.com/micdonato/hm-python-ttrl"
repository = "https://github.com/micdonato/hm-python-ttrl"
authors = ["michele donato <michele.donato@freenome.com>"]
keywords = ["hypermodern", "python", "poetry", "tutorial"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {version = "^5.5", extras = ["toml"]}
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zubbola = "hm_python_ttrl.console:main"

# mind that this is the part I need to change in the pyproject template
# there is a 'core' folder in QuiCHE
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hm_python_ttrl"]

[tool.coverage.report]
show_missing = true