[tool.poetry]
name = "hm-python-ttrl"
version = "0.1.0"
description = "Learning poetry"
license = "proprietary"
readme = "README.md"
homepage = "https://github.com/micdonato/hm-python-ttrl"
repository = "https://github.com/micdonato/hm-python-ttrl"
authors = ["michele donato <michele.donato@freenome.com>"]
keywords = ["hypermodern", "python", "poetry", "tutorial"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
click = "^8.0.1"
requests = "^2.26.0"
scipy = "^1.7.0"
appnope = "^0.1.2"
attrs = "^21.2.0"
backcall = "^0.2.0"
bleach = "^3.3.1"
certifi = "^2021.5.30"
chardet = "^4.0.0"
Cycler = "^0.10.0"
decorator = "^5.0.9"
defusedxml = "^0.7.1"
entrypoints = "^0.3"
idna = "^3.2"
ipykernel = "^6.0.3"
ipython = "^7.25.0"
ipython_genutils = "^0.2.0"
ipywidgets = "^7.6.3"
jedi = "^0.18.0"
Jinja2 = "^3.0.1"
joblib = "^1.0.1"
jsonschema = "^3.2.0"
jupyter = "^1.0.0"
jupyter-client = "^6.2.0"
jupyter-console = "^6.4.0"
jupyter-core = "^4.7.1"
kiwisolver = "^1.3.1"
MarkupSafe = "^2.0.1"
matplotlib = "^3.4.2"
mistune = "^0.8.4"
more-itertools = "^8.8.0"
nbconvert = "^6.1.0"
nbformat = "^5.1.3"
notebook = "^6.4.0"
numpy = "^1.21.1"
packaging = "^21.0"
pandas = "^1.3.0"
pandocfilters = "^1.4.3"
parso = "^0.8.2"
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
plotly = "^5.1.0"
pluggy = "^0.13.1"
prometheus-client = "^0.11.0"
prompt-toolkit = "^3.0.19"
ptyprocess = "^0.7.0"
py = "^1.10.0"
Pygments = "^2.9.0"
pyparsing = "^2.4.7"
pyrsistent = "^0.18.0"
pytest = "^6.2.4"
python-dateutil = "^2.8.2"
pytz = "^2021.1"
pyzmq = "^22.1.0"
qtconsole = "^5.1.1"
QtPy = "^1.9.0"
retrying = "^1.3.3"
seaborn = "^0.11.1"
Send2Trash = "^1.7.1"
six = "^1.16.0"
tenacity = "^8.0.1"
terminado = "^0.10.1"
testpath = "^0.5.0"
tornado = "^6.1"
traitlets = "^5.0.5"
urllib3 = "^1.26.6"
wcwidth = "^0.2.5"
webencodings = "^0.5.1"
widgetsnbextension = "^3.5.1"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {version = "^5.5", extras = ["toml"]}
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zubbola = "hm_python_ttrl.console:main"

# mind that this is the part I need to change in the pyproject template
# there is a 'core' folder in QuiCHE
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hm_python_ttrl"]

[tool.coverage.report]
show_missing = true